--- a/Conit.WEB/Web.config
+++ b/Conit.WEB/Web.config
@@ -23,6 +23,12 @@
         preCondition="integratedMode,runtimeVersionv4.0"/>
     </handlers>
   </system.webServer>
+  <connectionStrings>
+    <add 
+      name="ConitConnection" 
+      connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ConitDB;Integrated Security=True" 
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
