--- a/Conit.BLL/Conit.BLL.csproj
+++ b/Conit.BLL/Conit.BLL.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CompanyService.cs" />
     <Compile Include="Services\InstructionPageService.cs" />
+    <Compile Include="Services\PartService.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
