--- a/Conit.DAL/Conit.DAL.csproj
+++ b/Conit.DAL/Conit.DAL.csproj
@@ -84,6 +84,10 @@
     <Compile Include="Migrations\202004260844352_InitialDatabaseModel.designer.cs">
       <DependentUpon>202004260844352_InitialDatabaseModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005041918430_IntToStringPictureIdInPartEntity.cs" />
+    <Compile Include="Migrations\202005041918430_IntToStringPictureIdInPartEntity.designer.cs">
+      <DependentUpon>202005041918430_IntToStringPictureIdInPartEntity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\EditRepository.cs" />
@@ -103,6 +107,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202004260844352_InitialDatabaseModel.resx">
       <DependentUpon>202004260844352_InitialDatabaseModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005041918430_IntToStringPictureIdInPartEntity.resx">
+      <DependentUpon>202005041918430_IntToStringPictureIdInPartEntity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
